Large commit: leagues grid, matches grid, matchj layout, user layout...